kustomize-demo/k8s/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: staging.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-nginx-service
                port:
                  number: 80
